--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -84,6 +84,7 @@ menu-item() {
 
         > :first-child {
           default-padding()
+          min-width: 45px
           border-right: 1px solid $border-color;
           cursor: pointer;
         }
