Fix App Name display

--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -12,16 +12,19 @@ $border-color = #555
   left: 0
 
   #zooniverse-top-bar-container
-    padding: 10px
+    margin-left: 30px
 
     #zooniverse-top-bar-info
       border-right: 1px $border-color solid
       float: left
+      width: ($one-half + $gutter-size)
 
     #zooniverse-top-bar-projects
       float: left
+      width: ($one-half + $gutter-size)
 
     #zooniverse-top-bar-login
+      display: block
       float: left
 
   #zooniverse-top-bar-button
