--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -1,27 +1,52 @@
 $background = #f9f8f3
-$text-color = #ddd
-$border-color = #555
+$text-color = #949392
+$border-color = #e0e0e0
 
 .zooniverse-top-bar
   background: $background
   color: $text-color
-  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif 
+  font-family: "Open Sans"
   width: 100%
+  height: 105px
   position: absolute
   top: 0 
   left: 0
 
   #zooniverse-top-bar-container
-    margin-left: 30px
+    margin: 30px
+
+    h3
+      font-size: 18px
+      font-weight: 200
+      line-height: 10px
+      margin-top: 0
+      margin-bottom: 0
+
+      strong
+        font-weight: 700
+
+    p
+      font-size: 11px
+      margin-bottom: 0
 
     #zooniverse-top-bar-info
-      border-right: 1px $border-color solid
       float: left
+      padding-top: 0
+      padding-bottom: 0
+      padding-right: 50px
       width: ($one-half + $gutter-size)
+      border-right: 1px $border-color solid
 
     #zooniverse-top-bar-projects
+      border-left: 1px #fff solid
       float: left
-      width: ($one-half + $gutter-size)
+      padding-left: 30px
+      width: ($one-third+ $gutter-size)
+
+      a
+        font-weight: 700
+        color: $text-color
+        text-decoration: none
 
     #zooniverse-top-bar-login
       display: block
@@ -29,3 +54,10 @@ $border-color = #555
 
   #zooniverse-top-bar-button
     padding: 10px
+    width: 40px
+    height: 40px
+    top: 100px
+    left: 105px
+    position: absolute
+    background: $background
+    border-radius(5px)
