Add language select

--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -134,7 +134,7 @@ body.hide-top-bar
   background: $background
   color: $text-color
   z-index: 999
-  top: 50%
+  top: 300px
   left: 50%
   height: 325px
   width: 300px
