--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -126,8 +126,7 @@ body.hide-top-bar
   border-radius(0px 0px 5px 5px)
 
   img
-    margin-left: 10px
-    margin-top: 10px
+    margin: 5px
 
 .sign-up 
   position: absolute
@@ -138,7 +137,6 @@ body.hide-top-bar
   left: 50%
   height: 325px
   width: 300px
-  margin-top: -150px
   margin-left: -150px
   font-family: "Open Sans"
   border-top: 1px solid $border-color;
