--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -126,7 +126,8 @@ body.hide-top-bar
   border-radius(0px 0px 5px 5px)
 
   img
-    margin: 5px
+    margin-left: 8px
+    margin-top: 8px
 
 .sign-up 
   position: absolute
