Group login form into divs to collapse better

--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -102,6 +102,12 @@ body.hide-top-bar
     .progress
       display: none
 
+   .inputs
+     display: inline
+
+   .buttons
+     display: inline
+
   #zooniverse-top-bar-languages
     display: block
     float: right
