--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -4,11 +4,12 @@ appearance(a)
   appearance: none
 
 body
-  transform(translateY(-100px))
   transition(all 0.5s ease-in-out)
+  position: relative
+  top: -100
 
 body.show-top-bar
-  transform(translateY(0))
+  top: 0
 
 .zooniverse-top-bar
   margin: 0
