Fix old browser button color IN OLD BROWSERS, WHOA.

--- a/css/browser_check.styl
+++ b/css/browser_check.styl
@@ -34,7 +34,7 @@
     button
       background #000
       border: 0
-      color inherit
+      color #fff
       font-family inherit
       font-size inherit
       font-weight bold
