--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -6,7 +6,7 @@ appearance(a)
 body
   transition(all 0.5s ease-in-out)
   position: relative
-  top: -100
+  top: -100px
 
 body.show-top-bar
   top: 0
