--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -39,7 +39,7 @@ body.show-top-bar
     margin-right: 5px
     padding-left: 5px
     background: $tb-input-bg
-    box-shadow: 0px 1px 0px #073b56, inset 0px 1px 2px rgba(0, 0, 0, 0.4)
+    box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.4)
     border: 1px solid #000
     color: $tb-text-color
 
