Buttons have pointer cursor

--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -30,6 +30,7 @@ body.show-top-bar
     border: 1px $tb-border-color-1 solid
 
   button
+    cursor: pointer
     box-shadow: inset 0px 1px 0px $tb-box-shadow-inset, 0px 1px 2px $tb-box-shadow
     background: $tb-button-bg
     color: $tb-text-color
