--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -4,7 +4,7 @@ appearance(a)
   appearance: none
 
 body
-  transition(all 0.5s ease-in-out)
+  transition(top 0.5s ease-in-out)
   position: relative
   top: -100px
 
@@ -18,6 +18,7 @@ body.show-top-bar
   left: 0
   box-shadow: 10px
   width: 100%
+  z-index: 999
 
   label
     display: block;
@@ -35,7 +36,7 @@ body.show-top-bar
     background: $tb-button-bg
     color: $tb-text-color
 
-  input[type="text"], input[type="password"] 
+  input[type="text"], input[type="password"]
     width: 115px
     margin-right: 5px
     padding-left: 5px
@@ -88,7 +89,7 @@ body.show-top-bar
     border-left: 1px $tb-border-color-2 solid
     float: left
     padding-left: 17px
-    padding-right: 15px 
+    padding-right: 15px
     width: 300px
     height: 45px
 
@@ -102,13 +103,13 @@ body.show-top-bar
         font-weight: 200
 
   #zooniverse-top-bar-login
-    float: right 
+    float: right
     height: 45px
 
     h3
       display: inline
       line-height: 0
-    
+
     .progress
       display: none
 
@@ -144,11 +145,15 @@ body.show-top-bar
   border-right: 1px $tb-bottom-border solid
   border-left: 1px $tb-bottom-border solid
 
+  a
+    display: block
+
   img
+    border: 0
     margin-left: 8px
     margin-top: 6px
 
-.dialog.sign-up 
+.dialog.sign-up
   height: 325px
   width: 300px
   font-family: "Open Sans"
@@ -168,7 +173,7 @@ body.show-top-bar
     input[type="text"], input[type="password"]
       width: 150px
       margin-top: 0
-    
+
   p
     margin: 0;
     text-align: center
@@ -185,14 +190,14 @@ body.show-top-bar
   button.dialog-closer
     float: right
 
-  > div 
+  > div
     margin: 20px;
     text-align: center;
 
 @media (max-width: 1385px)
   #zooniverse-top-bar-container
     #zooniverse-top-bar-info
-      width: 300px
+      width: auto
 
       h3
         margin-top: 17px
@@ -201,7 +206,7 @@ body.show-top-bar
         display: none
 
     #zooniverse-top-bar-projects
-      width: 110px 
+      width: 110px
 
       h3
         margin-top: 17px
