Add forgot password link. Add link to zooniverse home page

--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -69,8 +69,10 @@ body.show-top-bar
     margin-top: 0
     margin-bottom: 0
 
-    strong
+    a
       font-weight: 700
+      text-decoration: none
+      color: $tb-text-color
 
   p
     font-size: 10px
