Fix positioning on forgot password

--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -115,11 +115,16 @@ body.show-top-bar
     .progress
       display: none
 
-   .inputs
-     display: inline
+    .inputs
+      display: inline-block
 
-   .buttons
-     display: inline
+      p
+        display: inline
+
+    .buttons
+      display: inline-block
+      position: relative
+      top: -28px
 
   #zooniverse-top-bar-languages
     float: right
