--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -3,20 +3,15 @@ appearance(a)
   -moz-appearance: none
   appearance: none
 
-body
-  transition(top 0.5s ease-in-out)
-  position: relative
-  top: -100px
-
-body.show-top-bar
-  top: 0
+body.show-top-bar .zooniverse-top-bar
+  height: 100px
 
 .zooniverse-top-bar
-  margin: 0
-  position: relative
-  top: 0
+  transition(height 0.5s ease-in-out)
+  bottom: 100%
+  height: 0
   left: 0
-  box-shadow: 10px
+  position: relative
   width: 100%
   z-index: 999
 
@@ -56,13 +51,17 @@ body.show-top-bar
     margin-left: 5px
 
 #zooniverse-top-bar-container
-  padding: 30px
-  display: block
+  box-sizing(border-box)
   background: $tb-background
-  color: $tb-text-color
-  font-family: "Open Sans"
-  height: 45px
   border-bottom: 1px $tb-bottom-border solid
+  bottom: 0
+  color: $tb-text-color
+  height: 100px
+  font-family: "Open Sans"
+  left: 0
+  padding: 30px
+  position: absolute
+  width 100%
 
   h3
     font-size: 18px
@@ -141,16 +140,16 @@ body.show-top-bar
       margin-right: -5px
 
 #zooniverse-top-bar-button
-  width: 50px
-  height: 50px
-  top: -1px
-  left: 105px
-  position: relative
   background: $tb-background
-  border-radius(0px 0px 5px 5px)
-  border-bottom: 1px $tb-bottom-border solid
-  border-right: 1px $tb-bottom-border solid
-  border-left: 1px $tb-bottom-border solid
+  border-radius: 0px 0px 5px 5px
+  border: 0 $tb-bottom-border solid
+  border-width: 0 1px 1px
+  height: 50px
+  left: 50%
+  margin-left: -25px
+  position: absolute
+  top: 100%
+  width: 50px
 
   a
     display: block
