Missed a 5px peek

--- a/css/top_bar.styl
+++ b/css/top_bar.styl
@@ -9,7 +9,7 @@ body.show-top-bar .zooniverse-top-bar
 .zooniverse-top-bar
   transition(height 0.5s ease-in-out)
   bottom: 100%
-  height: 0
+  height: 5px
   left: 0
   position: relative
   width: 100%
