--- a/css/top_bar_alt.styl
+++ b/css/top_bar_alt.styl
@@ -2,6 +2,7 @@ $top-bar-height = 100px
 
 .zooniverse-top-bar
   background white
+  box-shadow 1px 1px 2px rgba(black, 0.5)
   font 10px "Open Sans", sans-serif
   height 5px
   position relative
@@ -15,7 +16,6 @@ $top-bar-height = 100px
 #zooniverse-top-bar-container
   background inherit
   border-bottom 1px solid rgba(black, 0.25)
-  box-shadow 2px 4px 3px -3px black
   box-sizing border-box
   bottom 0
   height $top-bar-height
@@ -109,7 +109,7 @@ $top-bar-height = 100px
   border 0px solid rgba(black, 0.25)
   border-width 0 1px 1px
   border-radius 0 0 5px 5px
-  box-shadow 2px 4px 3px -3px black
+  box-shadow inherit
   left 50%
   margin -1px 0 0 -500px
   position absolute
