--- a/css/top-bar.css
+++ b/css/top-bar.css
@@ -1,5 +1,80 @@
 .zooniverse-top-bar {
+  background: #1c1c1c;
+  color: #fff;
+  font-size: 11px;
+  height: 30px;
+  padding: 5px;
   position: absolute;
   right: 0;
+  text-shadow: 0 1px 1px #000;
   top: 0;
+}
+.zooniverse-top-bar:before {
+  border-color: #1c1c1c #1c1c1c transparent transparent;
+  border-style: solid;
+  border-width: 20px 10px;
+  content: "";
+  height: 0;
+  position: absolute;
+  right: 100%;
+  top: 0;
+  width: 0;
+}
+.zooniverse-top-bar a {
+  color: inherit;
+  text-decoration: none;
+}
+.zooniverse-top-bar button {
+  background: transparent;
+  border: 0;
+  color: inherit;
+  cursor: pointer;
+  font: inherit;
+  margin: 0;
+  padding: 0;
+  text-shadow: inherit;
+}
+.zooniverse-top-bar .sign-in-form {
+  display: block;
+}
+.zooniverse-top-bar .current-user {
+  display: none;
+}
+.zooniverse-top-bar .current-user .messages,
+.zooniverse-top-bar .current-user .info,
+.zooniverse-top-bar .current-user .avatar {
+  display: inline-block;
+  vertical-align: top;
+}
+.zooniverse-top-bar .current-user .messages {
+  line-height: 30px;
+  margin-right: 10px;
+}
+.zooniverse-top-bar .current-user .messages .message-count {
+  color: inherit;
+}
+.zooniverse-top-bar .current-user .info {
+  margin-right: 5px;
+  text-align: right;
+}
+.zooniverse-top-bar .current-user .info .current-user-name {
+  font-size: 13px;
+  font-weight: bold;
+}
+.zooniverse-top-bar .current-user .info button {
+  font-size: 8px;
+  text-transform: uppercase;
+}
+.zooniverse-top-bar .current-user .avatar img {
+  height: 30px;
+  width: 30px;
+}
+.zooniverse-top-bar.signed-in .sign-in-form {
+  display: none;
+}
+.zooniverse-top-bar.signed-in .current-user {
+  display: block;
+}
+.zooniverse-top-bar .zooniverse-login-form button[name="sign-out"] {
+  display: none;
 }
