--- a/src/css/top-bar.styl
+++ b/src/css/top-bar.styl
@@ -1,4 +1,82 @@
 .zooniverse-top-bar
+  background: #1c1c1c
+  color: #fff
+  font-size: 11px
+  height: 30px
+  padding: 5px
   position: absolute
   right: 0
+  text-shadow: 0 1px 1px #000
   top: 0
+
+  &:before
+    border-color: #1c1c1c #1c1c1c transparent transparent
+    border-style: solid
+    border-width: 20px 10px
+    content: ""
+    height: 0
+    position: absolute
+    right: 100%
+    top: 0
+    width: 0
+
+  a
+    color: inherit
+    text-decoration: none
+
+  button
+    background: transparent
+    border: 0
+    color: inherit
+    cursor: pointer
+    font: inherit
+    margin: 0
+    padding: 0
+    text-shadow: inherit
+
+  .sign-in-form
+    display: block
+
+  .current-user
+    display: none
+
+    .messages,
+    .info,
+    .avatar
+      display: inline-block
+      vertical-align: top
+
+    .messages
+      line-height: 30px
+      margin-right: 10px
+
+      .message-count
+        color: inherit
+
+    .info
+      margin-right: 5px
+      text-align: right
+
+      .current-user-name
+        font-size: 13px
+        font-weight: bold
+
+      button
+        font-size: 8px
+        text-transform: uppercase
+
+    .avatar
+      img
+        height: 30px
+        width: 30px
+
+  &.signed-in
+    .sign-in-form
+      display: none
+
+    .current-user
+      display: block
+
+  .zooniverse-login-form
+    button[name="sign-out"]
+      display: none
