--- a/css/top-bar.css
+++ b/css/top-bar.css
@@ -1,7 +1,7 @@
 .zooniverse-top-bar {
   background: #1c1c1c;
   color: #fff;
-  font-size: 11px;
+  font: bold 11px "Helvetica Neue", Arial, Helvetica, sans-serif;
   height: 30px;
   padding: 5px;
   position: absolute;
@@ -34,8 +34,22 @@
   padding: 0;
   text-shadow: inherit;
 }
-.zooniverse-top-bar .sign-in-form {
+.zooniverse-top-bar .no-user {
   display: block;
+  margin-top: 7px;
+}
+.zooniverse-top-bar .no-user .zooniverse,
+.zooniverse-top-bar .no-user .sign-in {
+  display: inline-block;
+  margin: 0 15px;
+  vertical-align: middle;
+}
+.zooniverse-top-bar .no-user .zooniverse {
+  font-size: 13px;
+}
+.zooniverse-top-bar .no-user .sign-in {
+  font-size: 10px;
+  text-transform: uppercase;
 }
 .zooniverse-top-bar .current-user {
   display: none;
@@ -44,32 +58,37 @@
 .zooniverse-top-bar .current-user .info,
 .zooniverse-top-bar .current-user .avatar {
   display: inline-block;
-  vertical-align: top;
+  margin: 0 15px;
+  vertical-align: middle;
 }
 .zooniverse-top-bar .current-user .messages {
-  line-height: 30px;
-  margin-right: 10px;
+  margin-top: -3px;
 }
 .zooniverse-top-bar .current-user .messages .message-count {
   color: inherit;
 }
 .zooniverse-top-bar .current-user .info {
-  margin-right: 5px;
+  line-height: 1;
+  margin-top: -3px;
   text-align: right;
 }
 .zooniverse-top-bar .current-user .info .current-user-name {
   font-size: 13px;
   font-weight: bold;
+  line-height: 1;
 }
 .zooniverse-top-bar .current-user .info button {
   font-size: 8px;
   text-transform: uppercase;
 }
+.zooniverse-top-bar .current-user .avatar {
+  margin: 0;
+}
 .zooniverse-top-bar .current-user .avatar img {
   height: 30px;
   width: 30px;
 }
-.zooniverse-top-bar.signed-in .sign-in-form {
+.zooniverse-top-bar.signed-in .no-user {
   display: none;
 }
 .zooniverse-top-bar.signed-in .current-user {
