--- a/src/css/top-bar.styl
+++ b/src/css/top-bar.styl
@@ -2,8 +2,7 @@
   background: #1c1c1c
   color: #fff
   font: bold 11px "Helvetica Neue", Arial, Helvetica, sans-serif
-  height: 30px
-  padding: 5px
+  height: 40px
   position: absolute
   right: 0
   text-shadow: 0 1px 1px #000
@@ -37,7 +36,7 @@
 
   .no-user
     display: block
-    margin-top: 7px
+    margin-top: 4px
 
     .zooniverse,
     .sign-in
@@ -48,12 +47,26 @@
     .zooniverse
       font-size: 13px
 
+      .zooniverse-logo
+        background: url("./images/zooniverse-logo-white.png")
+        display: inline-block
+        height: 25px
+        margin-right: 5px
+        position: relative
+        top: -2px
+        vertical-align: middle
+        width: 25px
+
     .sign-in
       font-size: 10px
       text-transform: uppercase
 
+      button
+        padding: 10px 0
+
   .current-user
     display: none
+    margin-top: 5px
 
     .messages,
     .info,
