Compile Stylus with Nib

--- a/css/dialog.css
+++ b/css/dialog.css
@@ -12,6 +12,10 @@
   background: rgba(0,0,0,0);
   display: table;
   width: 100%;
+  -webkit-transition: background-color 0.5s ease-in-out;
+  -moz-transition: background-color 0.5s ease-in-out;
+  -o-transition: background-color 0.5s ease-in-out;
+  -ms-transition: background-color 0.5s ease-in-out;
   transition: background-color 0.5s ease-in-out;
   height: 100%;
 }
@@ -19,19 +23,33 @@
   display: table-cell;
   text-align: center;
   vertical-align: middle;
+  -webkit-perspective: 1000px;
+  -moz-perspective: 1000px;
+  -ms-perspective: 1000px;
   perspective: 1000px;
 }
 .zooniverse-dialog .underlay .container .dialog {
   background: #f4f4f4;
   border-top: 5px solid #050505;
+  -webkit-box-shadow: 0 3px 5px rgba(0,0,0,0.5);
   box-shadow: 0 3px 5px rgba(0,0,0,0.5);
   display: inline-block;
   max-width: 33%;
   opacity: 0;
+  filter: alpha(opacity=0);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   padding: 30px;
   position: relative;
   text-align: left;
+  -webkit-transform: translateY(-25%) rotateX(30deg) scale(0.75);
+  -moz-transform: translateY(-25%) rotateX(30deg) scale(0.75);
+  -o-transform: translateY(-25%) rotateX(30deg) scale(0.75);
+  -ms-transform: translateY(-25%) rotateX(30deg) scale(0.75);
   transform: translateY(-25%) rotateX(30deg) scale(0.75);
+  -webkit-transition: opacity 0.25s ease-in-out, -webkit-transform 0.33s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out, -moz-transform 0.33s ease-in-out;
+  -o-transition: opacity 0.25s ease-in-out, -o-transform 0.33s ease-in-out;
+  -ms-transition: opacity 0.25s ease-in-out, -ms-transform 0.33s ease-in-out;
   transition: opacity 0.25s ease-in-out, transform 0.33s ease-in-out;
 }
 .zooniverse-dialog .underlay .container .dialog > form > button[name="close-dialog"] {
@@ -53,6 +71,12 @@
 }
 .zooniverse-dialog.showing .underlay .container .dialog {
   opacity: 1;
+  -ms-filter: none;
+  filter: none;
+  -webkit-transform: translateY(0) rotateX(0) scale(1);
+  -moz-transform: translateY(0) rotateX(0) scale(1);
+  -o-transform: translateY(0) rotateX(0) scale(1);
+  -ms-transform: translateY(0) rotateX(0) scale(1);
   transform: translateY(0) rotateX(0) scale(1);
 }
 .zooniverse-dialog button {
@@ -82,13 +106,26 @@
   width: 25px;
 }
 .zooniverse-dialog .loader {
+  -webkit-animation: 1s zooniverse-progress linear infinite;
+  -moz-animation: 1s zooniverse-progress linear infinite;
+  -o-animation: 1s zooniverse-progress linear infinite;
+  -ms-animation: 1s zooniverse-progress linear infinite;
   animation: 1s zooniverse-progress linear infinite;
+  background: -webkit-gradient(linear, left top, right bottom, color-stop(0.25, transparent), color-stop(0.25, #000), color-stop(0.5, #000), color-stop(0.5, transparent), color-stop(0.75, transparent), color-stop(0.75, #000));
+  background: -webkit-linear-gradient(left top, transparent 25%, #000 25%, #000 50%, transparent 50%, transparent 75%, #000 75%);
+  background: -moz-linear-gradient(left top, transparent 25%, #000 25%, #000 50%, transparent 50%, transparent 75%, #000 75%);
+  background: -o-linear-gradient(left top, transparent 25%, #000 25%, #000 50%, transparent 50%, transparent 75%, #000 75%);
+  background: -ms-linear-gradient(left top, transparent 25%, #000 25%, #000 50%, transparent 50%, transparent 75%, #000 75%);
   background: linear-gradient(left top, transparent 25%, #000 25%, #000 50%, transparent 50%, transparent 75%, #000 75%);
+  -webkit-background-size: 25px 25px;
+  -moz-background-size: 25px 25px;
   background-size: 25px 25px;
   bottom: 0;
   display: none;
   left: 0;
   opacity: 0.05;
+  filter: alpha(opacity=5);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=5)";
   position: absolute;
   right: 0;
   top: 0;
@@ -104,7 +141,10 @@
 .zooniverse-dialog input {
   background: #f0f0f0;
   border: 1px solid #ccc;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
+  -webkit-box-shadow: 0 1px 0 #fff;
   box-shadow: 0 1px 0 #fff;
   font-size: 12px;
   padding: 10px;
@@ -116,6 +156,8 @@
   font-size: 10px;
   margin: 5px 13px;
   opacity: 0.75;
+  filter: alpha(opacity=75);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=75)";
 }
 .zooniverse-dialog .error-message {
   color: #800000;
@@ -129,7 +171,9 @@
 .zooniverse-dialog .action button {
   background: #fff;
   border: 1px solid #bbb;
+  -webkit-border-radius: 3px;
   border-radius: 3px;
+  -webkit-box-shadow: 0 1px 0 #fff inset, 0 1px 3px rgba(0,0,0,0.25);
   box-shadow: 0 1px 0 #fff inset, 0 1px 3px rgba(0,0,0,0.25);
   font-size: 12px;
   font-weight: bold;
@@ -138,6 +182,7 @@
 }
 .zooniverse-dialog .action button:active {
   border-color: rgba(0,0,0,0.25);
+  -webkit-box-shadow: 0 100px rgba(0,0,0,0.125) inset;
   box-shadow: 0 100px rgba(0,0,0,0.125) inset;
 }
 @-moz-keyframes zooniverse-progress {
