--- a/src/css/dialog.styl
+++ b/src/css/dialog.styl
@@ -32,6 +32,7 @@
         background: #f4f4f4
         border-top: 5px solid #050505
         box-shadow: 0 3px 5px rgba(#000, 0.5)
+        color: #000
         display: inline-block
         max-width: 33%
         opacity: 0
