--- a/src/css/footer.styl
+++ b/src/css/footer.styl
@@ -4,9 +4,24 @@
   padding-left: 200px
 
   .title
-    font-size: 20px
+    font-size: 18px
+    margin-bottom: 1em
 
-    .categories
-      .category
-        float: left
-        width: 25%
+  .projects
+    font-size: 14px
+    overflow: hidden
+
+    .category
+      float: left
+      width: 25%
+
+      .category-title
+        text-transform: uppercase
+
+      a
+        color: inherit
+        opacity: 0.75
+        text-decoration: none
+
+        &:hover
+          opacity: 1
