Top bar style changes from long ago

--- a/css/top_bar_alt.styl
+++ b/css/top_bar_alt.styl
@@ -16,6 +16,7 @@ $top-bar-height = 100px
 #zooniverse-top-bar-container
   background inherit
   border-bottom 1px solid rgba(black, 0.25)
+  box-shadow 0 1px 3px rgba(black, 0.33)
   box-sizing border-box
   bottom 0
   height $top-bar-height
@@ -106,7 +107,6 @@ $top-bar-height = 100px
 
 #zooniverse-top-bar-button
   background inherit
-  border 0px solid rgba(black, 0.25)
   border-width 0 1px 1px
   border-radius 0 0 5px 5px
   box-shadow inherit
